[package]
name = "test1"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步编程库
tokio = { version = "1.37", features = ["full"] }  # 添加这行
reqwest = { version = "0.13", features = ["json"] }
# 序列反序列库
serde = { version = "1.0", features = ["derive"] }  # 启用 derive 宏
serde_json = "1.0"  # JSON 支持

# 编辑器解析库
# syn = { version = "2.0", features = ["full"] }
# quote = "1.0"
#proc-macro2 = "1.0"
